--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/css/vendor.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/vendor.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
@@ -289,7 +289,7 @@
     </div>
 </div>
 
-<script src="/js/vendor.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="js/vendor.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
