Главная+Каталог и горизонтальная прокрутка, изменил путь картинок

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <!--END header-->
 
                     <div class="catalog__list">
-                        <a href="" class="catalog__item" style="background: url(/images/content/catalog1.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="" class="catalog__item" style="background: url(images/content/catalog1.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
@@ -330,7 +330,7 @@
 
                             </div>
                         </a>
-                        <a href="" class="catalog__item" style="background: url(/images/content/catalog2.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="" class="catalog__item" style="background: url(images/content/catalog2.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
@@ -352,7 +352,7 @@
 
                             </div>
                         </a>
-                        <a href="" class="catalog__item" style="background: url(/images/content/catalog3.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="" class="catalog__item" style="background: url(images/content/catalog3.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
@@ -374,7 +374,7 @@
 
                             </div>
                         </a>
-                        <a href="" class="catalog__item" style="background: url(/images/content/catalog4.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="" class="catalog__item" style="background: url(images/content/catalog4.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
