Добавил страницу конструктора

--- a/constructor.html
+++ b/constructor.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<div class="wrapper catalog">
+<div class="wrapper const" style="background:url(images/bg/bg-const.jpg)0 0 no-repeat; background-size: cover;">
 
     <!--header-->
     <header class="header header_abs">
@@ -61,96 +61,75 @@
     </header>
     <!--END header-->
 
-    <div class="catalog__list">
-        <a href="" class="catalog__item" style="background: url(/images/content/catalog1.jpg) 0 0 no-repeat; background-size: cover;">
-            <div class="catalog__item-filter"></div>
+    <div class="container">
+        <div class="const__content">
+            <div class="row">
+                <!-- left -->
+                <div class="const__left">
+                    <h3 class="const__title">
+                        СОЗДАЙТЕ КОСМЕТИЧЕСКОЕ СРЕДСТВО ПО СОБСТВЕННОЙ РЕЦЕПТУРЕ
+                    </h3>
 
-            <div class="catalog__item-content">
-                <div class="catalog__item-title">
-                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
-                </div>
-                <div class="catalog__item-hr">
-                    <div class="catalog__item-line"></div>
-                    <div class="catalog__item-point"></div>
-                </div>
+                    <div class="const__hr">
+                        <div class="const__hr-line"></div>
+                        <div class="const__hr-point"></div>
+                    </div>
 
-                <div class="catalog__item-text">
-                    ОТОБРАНО ПРОФЕССИОНАЛАМИ
+                    <div class="const__text">
+                        Специалисты нашей компании оказывают комплексную информационную и технологическую поддержку по
+                        созданию уникальных рецептур. В нашем R&D-центре мы разрабатываем, тестируем и оптимизируем
+                        косметические продукты, учитывая все ваши пожелания: начиная от спектра действия и заканчивая
+                        финальной ценой. Если вы хотите создать новую линейку, вывести на рынок уникальный продукт или
+                        модернизировать текущие рецептуры – обращайтесь к нам.
+                    </div>
                 </div>
+                <!-- END left -->
 
-                <div class="catalog__item-link">
-                    Перейти
-                </div>
+                <!-- right -->
+                <div class="const__right">
+                    <div class="const__explanation">
+                        выберите компаненты
+                    </div>
 
-            </div>
-        </a>
-        <a href="" class="catalog__item" style="background: url(/images/content/catalog2.jpg) 0 0 no-repeat; background-size: cover;">
-            <div class="catalog__item-filter"></div>
+                    <ul class="const__list">
+                        <li class="const__item">
+                            <div class="const__item-arrow">
+                                <svg viewBox="0 0 75 18">
+                                    <use xlink:href="images/icons/sprite.svg#next"></use>
+                                </svg>
+                            </div>
+                            <img src="images/content/const1.png" alt="" class="const__item-img">
+                        </li>
+                        <li class="const__item">
+                            <div class="const__item-arrow">
+                                <svg viewBox="0 0 75 18">
+                                    <use xlink:href="images/icons/sprite.svg#next"></use>
+                                </svg>
+                            </div>
+                            <img src="images/content/const2.png" alt="" class="const__item-img">
+                        </li>
+                        <li class="const__item">
+                            <div class="const__item-arrow">
+                                <svg viewBox="0 0 75 18">
+                                    <use xlink:href="images/icons/sprite.svg#next"></use>
+                                </svg>
+                            </div>
+                            <img src="images/content/const3.png" alt="" class="const__item-img">
+                        </li>
 
-            <div class="catalog__item-content">
-                <div class="catalog__item-title">
-                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
-                </div>
-                <div class="catalog__item-hr">
-                    <div class="catalog__item-line"></div>
-                    <div class="catalog__item-point"></div>
-                </div>
+                    </ul>
 
-                <div class="catalog__item-text">
-                    ОТОБРАНО ПРОФЕССИОНАЛАМИ
+                    <a href="" class="const__next">
+                        Перейти к созданию средства
+                    </a>
                 </div>
+                <!-- END right -->
 
-                <div class="catalog__item-link">
-                    Перейти
-                </div>
-
-            </div>
-        </a>
-        <a href="" class="catalog__item" style="background: url(/images/content/catalog3.jpg) 0 0 no-repeat; background-size: cover;">
-            <div class="catalog__item-filter"></div>
-
-            <div class="catalog__item-content">
-                <div class="catalog__item-title">
-                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
-                </div>
-                <div class="catalog__item-hr">
-                    <div class="catalog__item-line"></div>
-                    <div class="catalog__item-point"></div>
-                </div>
-
-                <div class="catalog__item-text">
-                    ОТОБРАНО ПРОФЕССИОНАЛАМИ
-                </div>
-
-                <div class="catalog__item-link">
-                    Перейти
-                </div>
-
-            </div>
-        </a>
-        <a href="" class="catalog__item" style="background: url(/images/content/catalog4.jpg) 0 0 no-repeat; background-size: cover;">
-            <div class="catalog__item-filter"></div>
-
-            <div class="catalog__item-content">
-                <div class="catalog__item-title">
-                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
-                </div>
-                <div class="catalog__item-hr">
-                    <div class="catalog__item-line"></div>
-                    <div class="catalog__item-point"></div>
-                </div>
-
-                <div class="catalog__item-text">
-                    ОТОБРАНО ПРОФЕССИОНАЛАМИ
-                </div>
-
-                <div class="catalog__item-link">
-                    Перейти
-                </div>
 
             </div>
-        </a>
+        </div>
     </div>
+
 </div>
 
 <!-- hidden-menu -->
