Добавил страницу контактов (пока без карты)

--- a/index.html
+++ b/index.html
@@ -521,6 +521,249 @@
 
                 </div>
             </div>
+            <div class="swiper-slide" data-hash="slide4">
+                <div class="wrapper contacts">
+
+                    <!--header-->
+                    <header class="header header_abs">
+                        <div class="container">
+                            <div class="header__wrapper">
+                                <!-- aside -->
+                                <aside class="menu">
+                                    <a href="#" class="menu__item jsMenu">
+                                        <img src="images/icons/menu.png" alt="" class="menu__img">
+                                    </a>
+                                </aside>
+                                <!-- END aside -->
+
+                                <!-- nav -->
+                                <nav class="header__nav nav">
+
+                                    <a href="#slide2" class="nav__item">
+                                        Каталог
+                                    </a>
+                                    <a href="" class="nav__item">
+                                        Новости
+                                    </a>
+                                    <a href="" class="nav__item">
+                                        Статьи и рецепты
+                                    </a>
+                                    <a href="" class="nav__item">
+                                        О компании
+                                    </a>
+
+                                </nav>
+                                <!-- END nav -->
+
+                                <!-- controls -->
+                                <div class="controls">
+                                    <a href="" class="controls__item jsCallorder">
+                                        <svg class="controls__item-svg" viewBox="0 0 482.6 482.6">
+                                            <use xlink:href="images/icons/sprite.svg#001-telephone"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="" class="controls__item">
+                                        <svg class="controls__item-svg" viewBox="0 0 513.323 513.323">
+                                            <use xlink:href="images/icons/sprite.svg#003-social"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="" class="controls__item">
+                                        <svg class="controls__item-svg" viewBox="0 0 52.966 52.966">
+                                            <use xlink:href="images/icons/sprite.svg#002-search"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <!-- END controls -->
+                            </div>
+                        </div>
+                    </header>
+                    <!--END header-->
+
+                    <!-- list -->
+                    <address class="contacts__list"
+                             style="background: url(images/bg/bg-contacts.jpg) 0 0 no-repeat; background-size: cover;">
+                        <div class="container">
+                            <div class="row">
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                                <div class="contact">
+                                    <div class="contact__title">
+                                        Москва
+                                    </div>
+                                    <div class="contact__hr">
+                                        <div class="contact__hr-line"></div>
+                                        <div class="contact__hr-point"></div>
+                                    </div>
+
+                                    <div class="contact__list">
+                                        <a href="" class="contact__item">
+                                            Рязанский проспект, д.86/1, <br> стр.26
+                                        </a>
+                                        <a href="tel:8 (800) 900-80-70" class="contact__item">
+                                            8 (800) 900-80-70
+                                        </a>
+                                        <a href="mailto:info@russochemie.ru" class="contact__item">
+                                            info@russochemie.ru
+                                        </a>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </address>
+                    <!-- END list -->
+
+                    <!-- map -->
+                    <div class="contacts__map"></div>
+                    <!-- END map -->
+
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
